[package]
name = "bridge-kidzone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
clap = { version = "4.3.19", features = ["derive"] }
dotenv = "0.15.0"
once_cell = "1.18.0"
open = "5.0.0"
reqwest = { version = "0.11.18", features = ["blocking", "json" ] }
rocket = { version = "=0.5.0-rc.3", features = ["json"] }

